# sensor-cgh

./: CMakeLists.txt  Makefile  README  README.md  config.xml
Debug/: config.xml  objects.mk  sense-cgh
Debug/src/: DepthCapture.d  HoloFilm.d  ParseWavefrontObj.d  main.d  subdir.mk
Debug/src/unused/: PointSource.d  PointSource_test.d  subdir.mk
Release/: makefile  sources.mk
src/: .cproject  .project  CMakeLists.txt  DepthCapture.cpp  DepthCapture.cpp~  DepthCapture.h  DepthCapture.h~  HoloFilm.cpp  HoloFilm.h  Makefile  ParseWavefrontObj.cpp  ParseWavefrontObj.h  main.cpp  main.cpp~
src/unused/: HologramRayCasting.h  PointSource.cpp  PointSource.h  PointSource_test.cpp
