# Author: Richard McIntosh
# Date: 6/14/2013
# Contact: rmcintosh@nmhu.edu

# we require cmake >= v 2.6
cmake_minimum_required(VERSION 2.6)

# add our source directory
add_subdirectory(src)

# uncomment to use various utiltiy classes that got cut
# from the main branch
# add_subdirectory(src/unused)
 	

